# rust_muscle_exercises

./: .gitignore  Cargo.toml  README.md  build.rs
android/: build.gradle  local.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/grpc/exercises/: DataActivity.java
android/app/src/main/proto/: route_guide.proto
android/app/src/main/res/layout/: activity_data.xml
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
db/: db.sql
html/: 404.html  welcome.html
proto/: muscle_exercises.proto
proto/grpc_object/: muscle_exercises_object.proto
rust/: build.rs
rust/proto/grpc_json/: muscle_exercises_json.proto
rust/src/lib/: config.rs  psql.rs
src/: api.rs  config.rs  psql.rs
src/lib/: api.rs  config.rs  psql_async.rs
