[package]
name = "muscle_exercises"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.1"
tokio-postgres = "0.7.2"
threadpool = "1.8.1"
json = "0.12.4"
tonic = "0.5.2"
tokio = { version = "1.9.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
prost = "0.8.0"
tokio-stream = { version =  "0.1.7", features = ["net"] }

[build-dependencies]
tonic-build = "0.5.2"

[lib]
name = "api"
path = "src/api.rs"

[[bin]]
name = "http-server"
path = "src/bin/http_server.rs"

# server binary
[[bin]]
name = "grpc-server"
path = "src/bin/grpc_server.rs"

# client binary
[[bin]]
name = "grpc-client"
path = "src/bin/grpc_client.rs"